--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,9 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity
-            android:name=".MainActivity"  />
-        <activity android:name=".RegistroActivity"></activity>
+        <activity android:name=".MainActivity" />
+        <activity android:name=".RegistroActivity" />
         <activity android:name=".LoginActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -23,6 +22,7 @@
         </activity>
         <activity android:name=".ResetActivity" />
         <activity android:name=".ProfileActivity" />
+        <activity android:name=".MinhaEquipeActivity" />
     </application>
 
 </manifest>
