--- a/app/build.gradle
+++ b/app/build.gradle
@@ -33,6 +33,7 @@ dependencies {
     compile 'com.google.firebase:firebase-database:10.2.6'
     compile 'com.android.support:support-v4:25.3.1'
     testCompile 'junit:junit:4.12'
+    compile 'com.android.support:cardview-v7:25.3.1'
 }
 
 apply plugin: 'com.google.gms.google-services'
