--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,15 +14,20 @@
         <activity android:name=".MainActivity" />
         <activity android:name=".RegistroActivity" />
         <activity android:name=".LoginActivity">
+
+        </activity>
+        <activity android:name=".ResetActivity" />
+        <activity android:name=".ProfileActivity" />
+        <activity android:name=".MinhaEquipeActivity" />
+        <activity android:name=".EquipeFormActivity" />
+        <activity android:name=".RegistroEquipeActivity" />
+        <activity android:name=".NoTeamActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResetActivity" />
-        <activity android:name=".ProfileActivity" />
-        <activity android:name=".MinhaEquipeActivity" />
     </application>
 
 </manifest>
