erro Gradle corrigido

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -14,21 +14,20 @@
         android:theme="@style/AppTheme">
         <activity android:name=".MainActivity">
 
+
         </activity>
         <activity android:name=".RegistroActivity" />
-        <activity android:name=".LoginActivity">
+        <activity android:name="activitys.MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
 
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".ResetActivity" />
+        <activity android:name="activitys.RegisterActivity" />
+        <activity android:name="activitys.LoginActivity" />
         <activity android:name=".ProfileActivity" />
-        <activity android:name=".MinhaEquipeActivity" />
-        <activity android:name=".RegistroEquipeActivity" />
-        <activity android:name=".NoTeamActivity">
-        </activity>
+        <activity android:name="activitys.ForgotPasswordActivity" />
     </application>
 
 </manifest>
